# steam-overachiever-v3

./: .gitignore  Cargo.toml  README.md  package.json
.github/: copilot-instructions.md
crates/backend/: Cargo.toml
crates/backend/migrations/: 20241219000001_initial.sql  20241219000002_history_tables.sql  20241222000001_run_history_unplayed.sql
crates/backend/src/: auth.rs  db.rs  main.rs  routes.rs  steam_api.rs  ws_handler.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  messages.rs  models.rs
crates/core/src/ui/: games_table.rs  log_panel.rs  mod.rs  stats_panel.rs
crates/desktop/: Cargo.toml  build.rs
crates/desktop/src/: cloud_sync.rs  config.rs  db.rs  icon_cache.rs  main.rs  steam_api.rs  ui.rs
crates/desktop/src/app/: mod.rs  state.rs
crates/desktop/src/app/panels/: games_table.rs  history.rs  mod.rs  stats_impl.rs  top.rs
crates/wasm/: Cargo.toml  index.html
crates/wasm/src/: app.rs  gdpr.rs  http_client.rs  lib.rs  panels.rs  platforms.rs  steam_images.rs  storage.rs  ws_client.rs
scripts/: build_wasm.ps1  deploy.ps1  setup_server.ps1
scripts/server/: Cargo.server.toml  nginx-overachiever.conf  overachiever-backend.service  overachiever.env.example  steam-images-cache.conf
src/: db.rs  main.rs  models.rs
src/app/: mod.rs  state.rs
src/app/panels/: games_table.rs  history.rs  top.rs
web/: index.html
