[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/desktop",
    "crates/backend",
    "crates/wasm",
]

# Default to desktop when running `cargo run`
default-members = ["crates/desktop"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kumorig/steam-overachiever-v3"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"

# Core crate
overachiever-core = { path = "crates/core" }

# Optimize release builds for WASM
[profile.release]
opt-level = "s"
lto = true
