[package]
name = "overachiever-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "overachiever-server"
path = "src/main.rs"

[dependencies]
overachiever-core = { path = "../core" }

# Web framework
axum = { version = "0.8.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (PostgreSQL via tokio-postgres to avoid sqlite linking conflicts)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Steam API
reqwest = { version = "0.12", features = ["json"] }

# Auth (using version 9.x as 10.x requires additional crypto features)
jsonwebtoken = "9"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
urlencoding = "2.1"
dotenvy = "0.15"
