[package]
name = "overachiever-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# Optional async support for trait definitions
async-trait = { version = "0.1", optional = true }

[features]
default = []
async = ["async-trait"]
